--- a/RaspberryPi/package.json
+++ b/RaspberryPi/package.json
@@ -4,6 +4,8 @@
     "version": "0.0.1",
     "dependencies": {
         "serialport": "1.4.5",
-        "nodemailer": "1.3.0"
+        "nodemailer": "1.3.0",
+        "socket.io": "1.2.1",
+        "express": "4.10.4"
     }
 }
